--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,39 @@
+backcall==0.2.0
 cycler==0.10.0
+decorator==5.0.5
 ifaddr==0.1.7
 imutils==0.5.4
-kiwisolver==1.3.1
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+kiwisolver==1.3.0
 matplotlib==3.4.1
 numpy==1.20.2
-opencv-python==4.5.1.48
+opencv-python-headless==4.5.1.48
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.2.0
 pkg-resources==0.0.0
+prompt-toolkit==3.0.18
+ptyprocess==0.7.0
+Pygments==2.8.1
 pyparrot==1.5.20
 pyparsing==2.4.7
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
 python-dateutil==2.8.1
+pyzmq==22.0.3
+QtAwesome==1.0.1
+qtconsole==4.7.7
+QtPy==1.9.0
 six==1.15.0
+tornado==6.1
+traitlets==5.0.5
 untangle==1.1.1
-zeroconf==0.29.0
+wcwidth==0.2.5
+zeroconf==0.26.3
